correctif : des liens étaient invisibles dans les thèmes proposés

--- a/themes/bleu/css/style.css
+++ b/themes/bleu/css/style.css
@@ -1,7 +1,7 @@
 /* personnalisations */
 
 /* modifications bootstrap */
-a{color:#17346C;text-decoration:none}
+a{color:#AAA;text-decoration:none}
 .text-primary{color:#17346C}
 .bg-primary{color:#fff;background-color:#17346C}
 .btn-primary{color:#fff;background-color:#17346C;border-color:#17346C}
