--- a/themes/orange/css/style.css
+++ b/themes/orange/css/style.css
@@ -1,7 +1,7 @@
 /* personnalisations */
 
 /* modifications bootstrap */
-a{color:#E8501F;text-decoration:none}
+a{color:#888;text-decoration:none}
 .text-primary{color:#E8501F}
 .bg-primary{color:#fff;background-color:#E8501F}
 .btn-primary{color:#fff;background-color:#E8501F;border-color:#E8501F}
