--- a/themes/rose/css/style.css
+++ b/themes/rose/css/style.css
@@ -1,7 +1,7 @@
 /* personnalisations */
 
 /* modifications bootstrap */
-a{color:#888;text-decoration:none}
+a{color:#555;text-decoration:none}
 .text-primary{color:#FF45F5}
 .bg-primary{color:#fff;background-color:#FF45F5}
 .btn-primary{color:#fff;background-color:#FF45F5;border-color:#FF45F5}
