--- a/themes/vert/css/style.css
+++ b/themes/vert/css/style.css
@@ -1,7 +1,7 @@
 /* personnalisations */
 
 /* modifications bootstrap */
-a{color:#05BA41;text-decoration:none}
+a{color:#555;text-decoration:none}
 .text-primary{color:#05BA41}
 .bg-primary{color:#fff;background-color:#05BA41}
 .btn-primary{color:#fff;background-color:#05BA41;border-color:#05BA41}
