--- a/themes/violet/css/style.css
+++ b/themes/violet/css/style.css
@@ -1,7 +1,7 @@
 /* personnalisations */
 
 /* modifications bootstrap */
-a{color:#B029E5;text-decoration:none}
+a{color:#333;text-decoration:none}
 .text-primary{color:#B029E5}
 .bg-primary{color:#fff;background-color:#B029E5}
 .btn-primary{color:#fff;background-color:#B029E5;border-color:#B029E5}
